--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Hello GitHub</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>我的主页</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>欢迎来到我的网页！</h1>
-    <p>这是一个用 GitHub 上传的静态网页示例。</p>
+  <div class="container">
+    <h1>你好，我是 kogenn 👋</h1>
+    <img src="https://avatars.githubusercontent.com/u/9919?v=4" alt="头像" class="avatar">
+    <p>我是一个正在成长中的开发者，喜欢写代码、建网页，也想成为全栈工程师。</p>
+    <h2>🎯 我的技能</h2>
+    <ul>
+      <li>HTML/CSS 基础</li>
+      <li>GitHub 使用</li>
+      <li>网页部署上线</li>
+    </ul>
+    <p>
+      🔗 <a href="https://github.com/kogenn-web" target="_blank">我的 GitHub</a>
+    </p>
+  </div>
 </body>
 </html>
