--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>我的主页</title>
+  <title>kogenn 的主页</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <h1>你好，我是 kogenn 👋</h1>
-    <img src="https://avatars.githubusercontent.com/u/9919?v=4" alt="头像" class="avatar">
-    <p>我是一个正在成长中的开发者，喜欢写代码、建网页，也想成为全栈工程师。</p>
+    <img src="avatar.jpg" alt="头像" class="avatar" />
+    <p>我是一名正在成长的开发者，热爱网页设计与编程，希望成为一名全栈工程师。</p>
+
     <h2>🎯 我的技能</h2>
-    <ul>
-      <li>HTML/CSS 基础</li>
-      <li>GitHub 使用</li>
-      <li>网页部署上线</li>
+    <ul class="skills">
+      <li>✅ HTML & CSS 基础</li>
+      <li>✅ JavaScript 初学中</li>
+      <li>✅ Git / GitHub 操作</li>
     </ul>
-    <p>
-      🔗 <a href="https://github.com/kogenn-web" target="_blank">我的 GitHub</a>
-    </p>
+
+    <h2>📬 联系方式</h2>
+    <p>Email: kogennweb@example.com</p>
+    <p><a href="https://github.com/kogenn-web" target="_blank">我的 GitHub</a></p>
   </div>
 </body>
 </html>
