--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="container">
     <h1 id="title">你好，我是 kogenn 👋</h1>
-    <img src="avatar.jpg" alt="头像" class="avatar" />
+    <img src="images.jpg" alt="头像" class="avatar" />
 
     <p id="intro">我是一名正在成长的开发者，热爱网页设计与编程，希望成为一名全栈工程师。</p>
 
