--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kogenn 的多语言主页</title>
+  <title>Kogenn 的全栈学习主页</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -15,7 +15,7 @@
 
   <div class="container">
     <h1 id="title">你好，我是 kogenn 👋</h1>
-    <img src="images.jpg" alt="头像" class="avatar" />
+    <img src="https://avatars.githubusercontent.com/u/9919?v=4" alt="头像" class="avatar" />
 
     <p id="intro">我是一名正在成长的开发者，热爱网页设计与编程，希望成为一名全栈工程师。</p>
 
@@ -24,6 +24,36 @@
       <li>✅ HTML / CSS 基础</li>
       <li>✅ JavaScript 初学</li>
       <li>✅ GitHub 上传与部署</li>
+    </ul>
+
+    <h2>🚀 我的目标：成为全栈工程师</h2>
+    <p>🎯 我的目标是成为能独立开发网站的全栈工程师，掌握前端 + 后端 + 数据库 + 部署技能。</p>
+
+    <h3>📘 全栈学习路线：</h3>
+    <ul class="roadmap">
+      <li>第1阶段：HTML / CSS / JavaScript 入门 - <a href="https://developer.mozilla.org/">MDN</a>, <a href="https://www.freecodecamp.org/">freeCodeCamp</a></li>
+      <li>第2阶段：Git / GitHub / 网页部署 - <a href="https://docs.github.com/">GitHub Docs</a></li>
+      <li>第3阶段：React 前端框架 - <a href="https://reactjs.org/">React Docs</a></li>
+      <li>第4阶段：Node.js + Express 后端开发 - <a href="https://nodejs.org/">Node.js 官网</a></li>
+      <li>第5阶段：数据库（MongoDB / MySQL） - <a href="https://www.mongodb.com/">MongoDB 官网</a></li>
+      <li>第6阶段：全栈项目开发与部署上线 - Vercel / Netlify / Heroku</li>
+      <li>第7阶段：面试准备 + 项目展示 - 个人主页 / GitHub</li>
+    </ul>
+
+    <h3>🧪 推荐练习项目：</h3>
+    <ul>
+      <li>✅ Todo List（JS 练手）</li>
+      <li>✅ 个人博客（React + Markdown）</li>
+      <li>✅ 评论区（API + 数据库）</li>
+      <li>✅ 登录系统（全栈认证）</li>
+    </ul>
+
+    <h3>🌐 编程练习网站：</h3>
+    <ul>
+      <li><a href="https://leetcode.com/">LeetCode</a></li>
+      <li><a href="https://www.codewars.com/">Codewars</a></li>
+      <li><a href="https://www.frontendmentor.io/">Frontend Mentor</a></li>
+      <li><a href="https://www.hackerrank.com/">HackerRank</a></li>
     </ul>
 
     <h2 id="contact-title">📬 联系方式</h2>
