--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <main class="card">
     <h1 id="title">你好，我是 kogenn 👋</h1>
-    <img src="images.jpg" alt="头像" class="avatar" />
+    <img src="file:///Users/gaoyuan/Desktop/%E6%9C%AA%E5%91%BD%E5%90%8D%E6%96%87%E4%BB%B6%E5%A4%B9/images.jpg" alt="头像" class="avatar" />
     <p id="intro">我是一名正在成长的开发者，热爱网页设计与编程，希望成为一名全栈工程师。</p>
 
     <section>
