--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
     </section>
 
     <section>
+      <h2>💻 辅助学习网站推荐</h2>
+      <h3>📘 在线教程</h3>
+      <ul class="links">
+        <li><a href="https://www.runoob.com/cprogramming/c-tutorial.html" target="_blank">菜鸟教程 C语言</a></li>
+        <li><a href="https://www.liaoxuefeng.com/wiki/1252599548343744" target="_blank">廖雪峰 C语言教程</a></li>
+        <li><a href="https://www.imooc.com/course/list?c=cpp" target="_blank">慕课网 C语言课程</a></li>
+      </ul>
+      <h3>🧪 练习平台</h3>
+      <ul class="links">
+        <li><a href="https://leetcode.cn/" target="_blank">LeetCode (中国站)</a></li>
+        <li><a href="https://www.nowcoder.com/" target="_blank">牛客网</a></li>
+        <li><a href="https://www.onlinegdb.com/online_c_compiler" target="_blank">OnlineGDB C语言在线编译器</a></li>
+      </ul>
+    </section>
+
+    <section>
       <h2>🚀 我的目标：成为全栈工程师</h2>
       <p>我的目标是掌握前端 + 后端 + 数据库 + 部署，能够独立完成项目开发。</p>
 
@@ -46,12 +62,44 @@
     </section>
 
     <section>
+      <h2>💻 辅助学习网站推荐</h2>
+      <h3>📘 在线教程</h3>
+      <ul class="links">
+        <li><a href="https://www.runoob.com/cprogramming/c-tutorial.html" target="_blank">菜鸟教程 C语言</a></li>
+        <li><a href="https://www.liaoxuefeng.com/wiki/1252599548343744" target="_blank">廖雪峰 C语言教程</a></li>
+        <li><a href="https://www.imooc.com/course/list?c=cpp" target="_blank">慕课网 C语言课程</a></li>
+      </ul>
+      <h3>🧪 练习平台</h3>
+      <ul class="links">
+        <li><a href="https://leetcode.cn/" target="_blank">LeetCode (中国站)</a></li>
+        <li><a href="https://www.nowcoder.com/" target="_blank">牛客网</a></li>
+        <li><a href="https://www.onlinegdb.com/online_c_compiler" target="_blank">OnlineGDB C语言在线编译器</a></li>
+      </ul>
+    </section>
+
+    <section>
       <h3>🔗 推荐练习平台</h3>
       <ul class="links">
         <li><a href="https://leetcode.com/">LeetCode</a></li>
         <li><a href="https://www.codewars.com/">Codewars</a></li>
         <li><a href="https://www.frontendmentor.io/">Frontend Mentor</a></li>
         <li><a href="https://www.hackerrank.com/">HackerRank</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>💻 辅助学习网站推荐</h2>
+      <h3>📘 在线教程</h3>
+      <ul class="links">
+        <li><a href="https://www.runoob.com/cprogramming/c-tutorial.html" target="_blank">菜鸟教程 C语言</a></li>
+        <li><a href="https://www.liaoxuefeng.com/wiki/1252599548343744" target="_blank">廖雪峰 C语言教程</a></li>
+        <li><a href="https://www.imooc.com/course/list?c=cpp" target="_blank">慕课网 C语言课程</a></li>
+      </ul>
+      <h3>🧪 练习平台</h3>
+      <ul class="links">
+        <li><a href="https://leetcode.cn/" target="_blank">LeetCode (中国站)</a></li>
+        <li><a href="https://www.nowcoder.com/" target="_blank">牛客网</a></li>
+        <li><a href="https://www.onlinegdb.com/online_c_compiler" target="_blank">OnlineGDB C语言在线编译器</a></li>
       </ul>
     </section>
 
@@ -63,6 +111,114 @@
   </main>
 
 <script>
+const langData = {
+  zh: {
+    title: "你好，我是 kogenn 👋",
+    intro: "我是一名正在成长的开发者，热爱网页设计与编程，希望成为一名全栈工程师。",
+    skillsTitle: "✨ 我的技能",
+    skillsList: ["✅ HTML / CSS 基础", "✅ JavaScript 初学", "✅ GitHub 上传与部署"],
+    roadmapTitle: "🚀 我的目标：成为全栈工程师",
+    roadmap: [
+      "📘 全栈学习路线：",
+      "第1阶段：HTML / CSS / JS - MDN, freeCodeCamp",
+      "第2阶段：Git / GitHub - GitHub Docs",
+      "第3阶段：React 前端框架 - React",
+      "第4阶段：Node.js + Express 后端 - Node.js",
+      "第5阶段：MongoDB / MySQL - MongoDB",
+      "第6阶段：项目部署上线 - Vercel / Netlify",
+      "第7阶段：面试准备 + 项目整理"
+    ],
+    resourcesTitle: "💻 辅助学习网站推荐",
+    tutorials: ["菜鸟教程 C语言", "廖雪峰 C语言教程", "慕课网 C语言课程"],
+    platforms: ["LeetCode (中国站)", "牛客网", "OnlineGDB C语言在线编译器"],
+    contactTitle: "📬 联系方式"
+  },
+  ja: {
+    title: "こんにちは、kogenn です 👋",
+    intro: "私は成長中の開発者で、Webデザインとプログラミングが大好きです。フルスタックエンジニアを目指しています。",
+    skillsTitle: "✨ スキル",
+    skillsList: ["✅ HTML / CSS の基礎", "✅ JavaScript 初級", "✅ GitHub 公開"],
+    roadmapTitle: "🚀 目標：フルスタックエンジニアになる",
+    roadmap: [
+      "📘 学習ステップ：",
+      "ステップ1：HTML / CSS / JS - MDN, freeCodeCamp",
+      "ステップ2：Git / GitHub - GitHub Docs",
+      "ステップ3：React フロントエンド - React",
+      "ステップ4：Node.js + Express バックエンド - Node.js",
+      "ステップ5：MongoDB / MySQL - MongoDB",
+      "ステップ6：デプロイ - Vercel / Netlify",
+      "ステップ7：面接準備 + ポートフォリオ作成"
+    ],
+    resourcesTitle: "💻 学習リソース",
+    tutorials: ["菜鳥チュートリアル", "廖雪峰のC言語入門", "慕課ネット C言語"],
+    platforms: ["LeetCode (中国版)", "牛客ネット", "OnlineGDB C言語コンパイラ"],
+    contactTitle: "📬 連絡先"
+  },
+  en: {
+    title: "Hi, I'm kogenn 👋",
+    intro: "I'm a growing developer who loves web design and programming. I aim to become a full-stack engineer.",
+    skillsTitle: "✨ My Skills",
+    skillsList: ["✅ Basic HTML / CSS", "✅ Beginner JavaScript", "✅ GitHub Deployment"],
+    roadmapTitle: "🚀 Goal: Become a Full-Stack Developer",
+    roadmap: [
+      "📘 Learning Roadmap:",
+      "Stage 1: HTML / CSS / JS - MDN, freeCodeCamp",
+      "Stage 2: Git / GitHub - GitHub Docs",
+      "Stage 3: React Frontend - React",
+      "Stage 4: Node.js + Express Backend - Node.js",
+      "Stage 5: MongoDB / MySQL - MongoDB",
+      "Stage 6: Deployment - Vercel / Netlify",
+      "Stage 7: Interview Preparation + Portfolio"
+    ],
+    resourcesTitle: "💻 Recommended Learning Tools",
+    tutorials: ["Runoob C Tutorial", "Liao Xuefeng's C Guide", "MOOC C Courses"],
+    platforms: ["LeetCode (CN)", "Nowcoder", "OnlineGDB C Compiler"],
+    contactTitle: "📬 Contact"
+  }
+};
+
+function setLang(lang) {
+  const d = langData[lang];
+  document.getElementById("title").innerText = d.title;
+  document.getElementById("intro").innerText = d.intro;
+  document.getElementById("skills-title").innerText = d.skillsTitle;
+  const skillsList = document.getElementById("skills-list");
+  skillsList.innerHTML = "";
+  d.skillsList.forEach(text => {
+    const li = document.createElement("li");
+    li.textContent = text;
+    skillsList.appendChild(li);
+  });
+
+  document.getElementById("roadmap-title").innerText = d.roadmapTitle;
+  const roadmapList = document.getElementById("roadmap-list");
+  roadmapList.innerHTML = "";
+  d.roadmap.forEach(line => {
+    const li = document.createElement("li");
+    li.textContent = line;
+    roadmapList.appendChild(li);
+  });
+
+  document.getElementById("resources-title").innerText = d.resourcesTitle;
+
+  const tutorialList = document.getElementById("tutorial-list");
+  const platformList = document.getElementById("platform-list");
+  tutorialList.innerHTML = "";
+  platformList.innerHTML = "";
+  d.tutorials.forEach(text => {
+    const li = document.createElement("li");
+    li.textContent = text;
+    tutorialList.appendChild(li);
+  });
+  d.platforms.forEach(text => {
+    const li = document.createElement("li");
+    li.textContent = text;
+    platformList.appendChild(li);
+  });
+
+  document.getElementById("contact-title").innerText = d.contactTitle;
+}
+
 const langData = {
   zh: {
     title: "你好，我是 kogenn 👋",
