--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <main class="card">
     <h1 id="title">你好，我是 kogenn 👋</h1>
-    <img src="images.jpg" alt="头像" class="avatar" />
+    <img src="https://avatars.githubusercontent.com/u/9919?v=4" alt="头像" class="avatar" />
     <p id="intro">我是一名正在成长的开发者，热爱网页设计与编程，希望成为一名全栈工程师。</p>
 
     <section>
@@ -30,15 +30,15 @@
     </section>
 
     <section>
-      <h2>💻 辅助学习网站推荐</h2>
+      <h2 id="resources-title">💻 辅助学习网站推荐</h2>
       <h3>📘 在线教程</h3>
-      <ul class="links">
+      <ul class="links" id="tutorial-list">
         <li><a href="https://www.runoob.com/cprogramming/c-tutorial.html" target="_blank">菜鸟教程 C语言</a></li>
         <li><a href="https://www.liaoxuefeng.com/wiki/1252599548343744" target="_blank">廖雪峰 C语言教程</a></li>
         <li><a href="https://www.imooc.com/course/list?c=cpp" target="_blank">慕课网 C语言课程</a></li>
       </ul>
       <h3>🧪 练习平台</h3>
-      <ul class="links">
+      <ul class="links" id="platform-list">
         <li><a href="https://leetcode.cn/" target="_blank">LeetCode (中国站)</a></li>
         <li><a href="https://www.nowcoder.com/" target="_blank">牛客网</a></li>
         <li><a href="https://www.onlinegdb.com/online_c_compiler" target="_blank">OnlineGDB C语言在线编译器</a></li>
@@ -46,11 +46,11 @@
     </section>
 
     <section>
-      <h2>🚀 我的目标：成为全栈工程师</h2>
+      <h2 id="roadmap-title">🚀 我的目标：成为全栈工程师</h2>
       <p>我的目标是掌握前端 + 后端 + 数据库 + 部署，能够独立完成项目开发。</p>
 
       <h3>📘 全栈学习路线：</h3>
-      <ul class="roadmap">
+      <ul class="roadmap" id="roadmap-list">
         <li><strong>第1阶段：</strong>HTML / CSS / JS - <a href="https://developer.mozilla.org/">MDN</a>, <a href="https://www.freecodecamp.org/">freeCodeCamp</a></li>
         <li><strong>第2阶段：</strong>Git / GitHub - <a href="https://docs.github.com/">GitHub Docs</a></li>
         <li><strong>第3阶段：</strong>React 前端框架 - <a href="https://reactjs.org/">React</a></li>
@@ -62,7 +62,7 @@
     </section>
 
     <section>
-      <h2>💻 辅助学习网站推荐</h2>
+      <h2 id="resources-title">💻 辅助学习网站推荐</h2>
       <h3>📘 在线教程</h3>
       <ul class="links">
         <li><a href="https://www.runoob.com/cprogramming/c-tutorial.html" target="_blank">菜鸟教程 C语言</a></li>
@@ -88,7 +88,7 @@
     </section>
 
     <section>
-      <h2>💻 辅助学习网站推荐</h2>
+      <h2 id="resources-title">💻 辅助学习网站推荐</h2>
       <h3>📘 在线教程</h3>
       <ul class="links">
         <li><a href="https://www.runoob.com/cprogramming/c-tutorial.html" target="_blank">菜鸟教程 C语言</a></li>
