--- a/index.html
+++ b/index.html
@@ -62,48 +62,6 @@
     </section>
 
     <section>
-      <h2 id="resources-title">💻 辅助学习网站推荐</h2>
-      <h3>📘 在线教程</h3>
-      <ul class="links">
-        <li><a href="https://www.runoob.com/cprogramming/c-tutorial.html" target="_blank">菜鸟教程 C语言</a></li>
-        <li><a href="https://www.liaoxuefeng.com/wiki/1252599548343744" target="_blank">廖雪峰 C语言教程</a></li>
-        <li><a href="https://www.imooc.com/course/list?c=cpp" target="_blank">慕课网 C语言课程</a></li>
-      </ul>
-      <h3>🧪 练习平台</h3>
-      <ul class="links">
-        <li><a href="https://leetcode.cn/" target="_blank">LeetCode (中国站)</a></li>
-        <li><a href="https://www.nowcoder.com/" target="_blank">牛客网</a></li>
-        <li><a href="https://www.onlinegdb.com/online_c_compiler" target="_blank">OnlineGDB C语言在线编译器</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h3>🔗 推荐练习平台</h3>
-      <ul class="links">
-        <li><a href="https://leetcode.com/">LeetCode</a></li>
-        <li><a href="https://www.codewars.com/">Codewars</a></li>
-        <li><a href="https://www.frontendmentor.io/">Frontend Mentor</a></li>
-        <li><a href="https://www.hackerrank.com/">HackerRank</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h2 id="resources-title">💻 辅助学习网站推荐</h2>
-      <h3>📘 在线教程</h3>
-      <ul class="links">
-        <li><a href="https://www.runoob.com/cprogramming/c-tutorial.html" target="_blank">菜鸟教程 C语言</a></li>
-        <li><a href="https://www.liaoxuefeng.com/wiki/1252599548343744" target="_blank">廖雪峰 C语言教程</a></li>
-        <li><a href="https://www.imooc.com/course/list?c=cpp" target="_blank">慕课网 C语言课程</a></li>
-      </ul>
-      <h3>🧪 练习平台</h3>
-      <ul class="links">
-        <li><a href="https://leetcode.cn/" target="_blank">LeetCode (中国站)</a></li>
-        <li><a href="https://www.nowcoder.com/" target="_blank">牛客网</a></li>
-        <li><a href="https://www.onlinegdb.com/online_c_compiler" target="_blank">OnlineGDB C语言在线编译器</a></li>
-      </ul>
-    </section>
-
-    <section>
       <h2 id="contact-title">📬 联系方式</h2>
       <p>Email: kogennweb@example.com</p>
       <p><a href="https://github.com/kogenn-web" target="_blank">我的 GitHub</a></p>
@@ -129,8 +87,16 @@ const langData = {
       "第7阶段：面试准备 + 项目整理"
     ],
     resourcesTitle: "💻 辅助学习网站推荐",
-    tutorials: ["菜鸟教程 C语言", "廖雪峰 C语言教程", "慕课网 C语言课程"],
-    platforms: ["LeetCode (中国站)", "牛客网", "OnlineGDB C语言在线编译器"],
+    tutorials: [
+      "菜鸟教程 C语言", 
+      "廖雪峰 C语言教程", 
+      "慕课网 C语言课程"
+    ],
+    platforms: [
+      "LeetCode (中国站)", 
+      "牛客网", 
+      "OnlineGDB C语言在线编译器"
+    ],
     contactTitle: "📬 联系方式"
   },
   ja: {
@@ -216,45 +182,6 @@ function setLang(lang) {
     platformList.appendChild(li);
   });
 
-  document.getElementById("contact-title").innerText = d.contactTitle;
-}
-
-const langData = {
-  zh: {
-    title: "你好，我是 kogenn 👋",
-    intro: "我是一名正在成长的开发者，热爱网页设计与编程，希望成为一名全栈工程师。",
-    skillsTitle: "✨ 我的技能",
-    skillsList: ["✅ HTML / CSS 基础", "✅ JavaScript 初学", "✅ GitHub 上传与部署"],
-    contactTitle: "📬 联系方式"
-  },
-  ja: {
-    title: "こんにちは、kogenn です 👋",
-    intro: "私は成長中の開発者で、Web開発とプログラミングが大好きです。フルスタックエンジニアを目指しています。",
-    skillsTitle: "✨ スキル",
-    skillsList: ["✅ HTML / CSS の基礎", "✅ JavaScript 初級", "✅ GitHub 公開"],
-    contactTitle: "📬 連絡先"
-  },
-  en: {
-    title: "Hi, I'm kogenn 👋",
-    intro: "I'm a growing developer who loves web design and programming. I aim to become a full-stack engineer.",
-    skillsTitle: "✨ My Skills",
-    skillsList: ["✅ Basic HTML / CSS", "✅ Beginner JavaScript", "✅ GitHub Deployment"],
-    contactTitle: "📬 Contact"
-  }
-};
-
-function setLang(lang) {
-  const d = langData[lang];
-  document.getElementById("title").innerText = d.title;
-  document.getElementById("intro").innerText = d.intro;
-  document.getElementById("skills-title").innerText = d.skillsTitle;
-  const skillsList = document.getElementById("skills-list");
-  skillsList.innerHTML = "";
-  d.skillsList.forEach(text => {
-    const li = document.createElement("li");
-    li.textContent = text;
-    skillsList.appendChild(li);
-  });
   document.getElementById("contact-title").innerText = d.contactTitle;
 }
 </script>
