--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h1 id="title">你好，我是 kogenn 👋</h1>
     <img src="https://avatars.githubusercontent.com/u/9919?v=4" alt="头像" class="avatar" />
     <p id="intro">我是一名正在成长的开发者，热爱网页设计与编程，希望成为一名全栈工程师。</p>
+    <p id="goal-desc">我的目标是掌握前端 + 后端 + 数据库 + 部署，能够独立完成项目开发。</p>
 
     <section>
       <h2 id="skills-title">✨ 我的技能</h2>
@@ -47,9 +48,6 @@
 
     <section>
       <h2 id="roadmap-title">🚀 我的目标：成为全栈工程师</h2>
-      <p>我的目标是掌握前端 + 后端 + 数据库 + 部署，能够独立完成项目开发。</p>
-
-      <h3>📘 全栈学习路线：</h3>
       <ul class="roadmap" id="roadmap-list">
         <li><strong>第1阶段：</strong>HTML / CSS / JS - <a href="https://developer.mozilla.org/">MDN</a>, <a href="https://www.freecodecamp.org/">freeCodeCamp</a></li>
         <li><strong>第2阶段：</strong>Git / GitHub - <a href="https://docs.github.com/">GitHub Docs</a></li>
@@ -73,38 +71,29 @@ const langData = {
   zh: {
     title: "你好，我是 kogenn 👋",
     intro: "我是一名正在成长的开发者，热爱网页设计与编程，希望成为一名全栈工程师。",
+    goalDesc: "我的目标是掌握前端 + 后端 + 数据库 + 部署，能够独立完成项目开发。",
     skillsTitle: "✨ 我的技能",
     skillsList: ["✅ HTML / CSS 基础", "✅ JavaScript 初学", "✅ GitHub 上传与部署"],
-    roadmapTitle: "🚀 我的目标：成为全栈工程师",
     roadmap: [
       "📘 全栈学习路线：",
       "第1阶段：HTML / CSS / JS - MDN, freeCodeCamp",
-      "第2阶段：Git / GitHub - GitHub Docs",
+      "第2阶段：Git / GitHub -GitHub Docs",
       "第3阶段：React 前端框架 - React",
       "第4阶段：Node.js + Express 后端 - Node.js",
       "第5阶段：MongoDB / MySQL - MongoDB",
       "第6阶段：项目部署上线 - Vercel / Netlify",
       "第7阶段：面试准备 + 项目整理"
     ],
-    resourcesTitle: "💻 辅助学习网站推荐",
-    tutorials: [
-      "菜鸟教程 C语言", 
-      "廖雪峰 C语言教程", 
-      "慕课网 C语言课程"
-    ],
-    platforms: [
-      "LeetCode (中国站)", 
-      "牛客网", 
-      "OnlineGDB C语言在线编译器"
-    ],
+    tutorials: ["菜鸟教程 C语言", "廖雪峰 C语言教程", "慕课网 C语言课程"],
+    platforms: ["LeetCode (中国站)", "牛客网", "OnlineGDB C语言在线编译器"],
     contactTitle: "📬 联系方式"
   },
   ja: {
     title: "こんにちは、kogenn です 👋",
     intro: "私は成長中の開発者で、Webデザインとプログラミングが大好きです。フルスタックエンジニアを目指しています。",
+    goalDesc: "私の目標はフロントエンド + バックエンド + データベース + デプロイを習得し、プロジェクトを独力で開発できるようになることです。",
     skillsTitle: "✨ スキル",
     skillsList: ["✅ HTML / CSS の基礎", "✅ JavaScript 初級", "✅ GitHub 公開"],
-    roadmapTitle: "🚀 目標：フルスタックエンジニアになる",
     roadmap: [
       "📘 学習ステップ：",
       "ステップ1：HTML / CSS / JS - MDN, freeCodeCamp",
@@ -115,17 +104,16 @@ const langData = {
       "ステップ6：デプロイ - Vercel / Netlify",
       "ステップ7：面接準備 + ポートフォリオ作成"
     ],
-    resourcesTitle: "💻 学習リソース",
-    tutorials: ["菜鳥チュートリアル", "廖雪峰のC言語入門", "慕課ネット C言語"],
+    tutorials: ["菜鳥チュートリアル", "廖雪峰のC言語入門", "慕课ネット C言語"],
     platforms: ["LeetCode (中国版)", "牛客ネット", "OnlineGDB C言語コンパイラ"],
     contactTitle: "📬 連絡先"
   },
   en: {
     title: "Hi, I'm kogenn 👋",
     intro: "I'm a growing developer who loves web design and programming. I aim to become a full-stack engineer.",
+    goalDesc: "My goal is to master front-end + back-end + database + deployment, enabling me to develop projects independently.",
     skillsTitle: "✨ My Skills",
     skillsList: ["✅ Basic HTML / CSS", "✅ Beginner JavaScript", "✅ GitHub Deployment"],
-    roadmapTitle: "🚀 Goal: Become a Full-Stack Developer",
     roadmap: [
       "📘 Learning Roadmap:",
       "Stage 1: HTML / CSS / JS - MDN, freeCodeCamp",
@@ -136,7 +124,6 @@ const langData = {
       "Stage 6: Deployment - Vercel / Netlify",
       "Stage 7: Interview Preparation + Portfolio"
     ],
-    resourcesTitle: "💻 Recommended Learning Tools",
     tutorials: ["Runoob C Tutorial", "Liao Xuefeng's C Guide", "MOOC C Courses"],
     platforms: ["LeetCode (CN)", "Nowcoder", "OnlineGDB C Compiler"],
     contactTitle: "📬 Contact"
@@ -147,7 +134,10 @@ function setLang(lang) {
   const d = langData[lang];
   document.getElementById("title").innerText = d.title;
   document.getElementById("intro").innerText = d.intro;
+  document.getElementById("goal-desc").innerText = d.goalDesc;
   document.getElementById("skills-title").innerText = d.skillsTitle;
+
+  // 技能列表
   const skillsList = document.getElementById("skills-list");
   skillsList.innerHTML = "";
   d.skillsList.forEach(text => {
@@ -156,7 +146,7 @@ function setLang(lang) {
     skillsList.appendChild(li);
   });
 
-  document.getElementById("roadmap-title").innerText = d.roadmapTitle;
+  // 学习路线
   const roadmapList = document.getElementById("roadmap-list");
   roadmapList.innerHTML = "";
   d.roadmap.forEach(line => {
@@ -165,23 +155,14 @@ function setLang(lang) {
     roadmapList.appendChild(li);
   });
 
+  // 教程和平台链接，仅更改文本，保留<a>标签
+  const tutorialAnchors = document.querySelectorAll("#tutorial-list a");
+  tutorialAnchors.forEach((a, i) => a.textContent = d.tutorials[i]);
+  const platformAnchors = document.querySelectorAll("#platform-list a");
+  platformAnchors.forEach((a, i) => a.textContent = d.platforms[i]);
+
+  // 推荐模块标题和联系方式
   document.getElementById("resources-title").innerText = d.resourcesTitle;
-
-  const tutorialList = document.getElementById("tutorial-list");
-  const platformList = document.getElementById("platform-list");
-  tutorialList.innerHTML = "";
-  platformList.innerHTML = "";
-  d.tutorials.forEach(text => {
-    const li = document.createElement("li");
-    li.textContent = text;
-    tutorialList.appendChild(li);
-  });
-  d.platforms.forEach(text => {
-    const li = document.createElement("li");
-    li.textContent = text;
-    platformList.appendChild(li);
-  });
-
   document.getElementById("contact-title").innerText = d.contactTitle;
 }
 </script>
