--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <main class="card">
     <h1 id="title">你好，我是 kogenn 👋</h1>
-    <img src="https://avatars.githubusercontent.com/u/9919?v=4" alt="头像" class="avatar" />
+    <img src="images.jpg" alt="头像" class="avatar" />
     <p id="intro">我是一名正在成长的开发者，热爱网页设计与编程，希望成为一名全栈工程师。</p>
     <p id="goal-desc">我的目标是掌握前端 + 后端 + 数据库 + 部署，能够独立完成项目开发。</p>
 
